fix edit page, delete ransack gem because it throws errors

--- a/rights-forward/app/views/users/_form.html.erb
+++ b/rights-forward/app/views/users/_form.html.erb
@@ -2,8 +2,8 @@
 
 
   <div class="field">
-    <%= f.label :fullname %><br>
-    <%= f.text_field :fullname %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
