up to date before switching new branch

--- a/rights-forward/app/views/users/_form.html.erb
+++ b/rights-forward/app/views/users/_form.html.erb
@@ -2,8 +2,8 @@
 
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :fullname %><br>
+    <%= f.text_field :fullname %>
   </div>
 
   <div class="field">
