draft nav bar styling

--- a/rights-forward/app/views/users/index.html.erb
+++ b/rights-forward/app/views/users/index.html.erb
@@ -1,23 +1,17 @@
-<div class="container">
 
+ <ul id="slide-out" class="side-nav fixed">
+    <li><div class="userView">
+      <h3 id="title">RIGHTS FORWARD</h3>
+    </div></li>
+      <li><div class="divider"></div></li>
+    <li><a class="menu" href="#">ABOUT</a></li>
+      <li><div class="divider"></div></li>
+    <li><a class="subheader menu">FIND TRAINER</a></li>
+      <li><div class="divider"></div></li>
+    <li><a class="waves-effect menu" href="#">RESOURCES</a></li>
+      <li><div class="divider"></div></li>
+    <li><a class="menu" href="#">PROFILE</a></li>
+      <li><div class="divider"></div></li>
+  </ul>
+  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
-<% if current_user %>
-  <h1><%= "Welcome #{current_user.name}" %></h1>
-  <img src=<%="#{current_user.image}"%> /> <br>
-  <h5><%= link_to "Sign out", "/signout" %></h5> <br>
-  <h5><a href ="users/<%=current_user.id%>/edit">Edit</a></h5>
-
-  <br>
-
-  <h5><a href ="/showall">Show All</a></h5><br>
-
-
-
-<!-- if current user, then can edit / add things to database -->
-
-
-<% else %>
-  <h1><%= link_to "Sign in with Twitter", "/auth/twitter" %></h1>
-<% end %>
-
-</div>
