add navbar form

--- a/rights-forward/app/assets/stylesheets/navbar.scss
+++ b/rights-forward/app/assets/stylesheets/navbar.scss
@@ -21,6 +21,7 @@ body {
   color: #c5c5c5;
 }
 
+
 .side-nav {
   background-color: #2a2a28;
   width: 240px;
@@ -29,4 +30,10 @@ body {
 .divider {
   background-color: #545450;
 }
+
+// li.selected > a {
+//   color: #dcb450;
+// }
+
+
 
