--- a/rights-forward/app/views/users/index.html.erb
+++ b/rights-forward/app/views/users/index.html.erb
@@ -1,17 +1,3 @@
-
- <ul id="slide-out" class="side-nav fixed">
-    <li><div class="userView">
-      <h3 id="title">RIGHTS FORWARD</h3>
-    </div></li>
-      <li><div class="divider"></div></li>
-    <li><a class="menu" href="#">ABOUT</a></li>
-      <li><div class="divider"></div></li>
-    <li><a class="subheader menu">FIND TRAINER</a></li>
-      <li><div class="divider"></div></li>
-    <li><a class="waves-effect menu" href="#">RESOURCES</a></li>
-      <li><div class="divider"></div></li>
-    <li><a class="menu" href="#">PROFILE</a></li>
-      <li><div class="divider"></div></li>
-  </ul>
-  <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
-
+<div>
+  <%= render "navbar" %>
+</div>
