add current user id href for profile

--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -10,7 +10,7 @@
       <li><div class="divider"></div></li>
     <li><a class="waves-effect menu" href="#">RESOURCES</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="menu" href="/users/">PROFILE</a></li>
+    <li><a class="menu" href="/users/<%=current_user.id%>">PROFILE</a></li>
       <li><div class="divider"></div></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
