--- a/rights-forward/app/views/users/show.html.erb
+++ b/rights-forward/app/views/users/show.html.erb
@@ -16,6 +16,7 @@ Check Profile:
 <h5><%= link_to "Sign out", "/signout" %></h5> <br>
   <h5><%= link_to 'Delete Account', current_user, method: :delete %></h5> <br>
   <h5><a href ="<%=current_user.id%>/edit">Edit</a></h5><br>
+  <h5><a href ="/">Home</a></h5><br>
 
 <% end %>
 
