--- a/rights-forward/app/views/users/showall.html.erb
+++ b/rights-forward/app/views/users/showall.html.erb
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-<div class="post_fav">
+<div >
   <%= render "advancedsearch" %>
 </div>
 
@@ -17,9 +17,7 @@
 
 <% end %>
 
-<% if @search %>
-Found you: <%=@search%>
-<% end %>
+
 <hr>
 
 
