--- a/rights-forward/app/views/users/_form.html.erb
+++ b/rights-forward/app/views/users/_form.html.erb
@@ -1,21 +1,20 @@
-<fieldset class="search-field">
-  <legend>Search Our Database</legend>
-  <%= search_form_for @search, url:'/showall' do |f| %>
-    <div class="field">
-      <%= f.label :name_cont, "Name contains" %>
-      <%= f.text_field :name_cont %>
-    </div>
+<%= form_for(@user) do |f| %>
+  <div class="field">
+    <%= f.label :fullname %><br>
+    <%= f.text_field :fullname %>
+  </div>
 
-    <div class="field">
-      <%= f.label "Area of Expertise" %><br />
-      <%= f.collection_check_boxes :expertises_id_in_any, Expertise.all, :id, :name do |b| %>
-        <div class="collection-check-box">
-          <%= b.check_box %>
-          <%= b.label %>
-        </div>
-      <% end %>
-    </div>
+  <div class="field">
+    <%= f.label "Area of Expertise" %><br />
+    <%= f.collection_check_boxes :expertise_ids, Expertise.all, :id, :name do |b| %>
+      <div class="collection-check-box">
+        <%= b.check_box %>
+        <%= b.label %>
+      </div>
+    <% end %>
+  </div>
 
-    <div class="actions"><%= f.submit "Search" %></div>
-  <% end %>
-</fieldset>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
