--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -8,7 +8,7 @@
       <li><div class="divider"></div></li>
     <li><a class="menu" href="/showall">FIND TRAINER</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="waves-effect menu" href="#">RESOURCES</a></li>
+    <li><a class="waves-effect menu" href="/">RESOURCES</a></li>
       <li><div class="divider"></div></li>
     <li><a class="menu" href="/users/<%=current_user.id%>">PROFILE</a></li>
       <li><div class="divider"></div></li>
