--- a/rights-forward/app/views/users/_advancedsearch.html.erb
+++ b/rights-forward/app/views/users/_advancedsearch.html.erb
@@ -1,31 +1,10 @@
 <fieldset class="search-field">
   <legend>Search Our Database</legend>
-  <%= search_form_for @search do |f| %>
+  <%= search_form_for @q do |f| %>
     <div class="field">
-      <%= f.label :name_cont, "Name contains" %>
-      <%= f.text_field :name_cont %>
+      <%= f.label :fullname_cont, "Name contains" %>
+      <%= f.search_field :fullname_cont  %>
     </div>
-
-    <div class="field">
-      <%= f.label "Area of Expertise" %><br />
-      <%= f.collection_check_boxes :expertises_id_in_any, Expertise.all, :id, :name do |b| %>
-        <div class="collection-check-box">
-          <%= b.check_box %>
-          <%= b.label %>
-        </div>
-      <% end %>
-    </div>
-
-    <div class="field">
-      <%= f.label "Skills" %><br />
-      <%= f.collection_check_boxes :skills_id_in_any, Skill.all, :id, :name do |b| %>
-        <div class="collection-check-box">
-          <%= b.check_box %>
-          <%= b.label %>
-        </div>
-      <% end %>
-    </div>
-
     <div class="actions"><%= f.submit "Search" %></div>
   <% end %>
 </fieldset>
