--- a/rights-forward/app/views/users/show.html.erb
+++ b/rights-forward/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
   Affiliation: <%= @user['affiliation'] %></br>
   Bio:
 
-  <h5><a href ="/showall">Show All</a></h5><br>
+  <h5><a href ="/users">Show All</a></h5><br>
 
 
 <% if @user['fullname'] == current_user.fullname %>
