--- a/rights-forward/app/views/users/edit.html.erb
+++ b/rights-forward/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
   <img src=<%="#{current_user.image}"%> /> <br>
   <h5><%= link_to "Sign out", "/signout" %></h5> <br>
   <h5><%= link_to 'Delete Account', current_user, method: :delete %></h5><br>
-  <h5><a href ="/showall">Show All</a></h5><br>
+  <h5><a href ="/users">Show All</a></h5><br>
   <h5><a href ="/">Home</a></h5><br>
 
 Skills are: <br>
