update with ransack, search works, edit works

--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -6,7 +6,7 @@
       <li><div class="divider"></div></li>
     <li><a class="menu" href="/">ABOUT</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="menu" href="/showall">FIND TRAINER</a></li>
+    <li><a class="menu" href="/users">FIND TRAINER</a></li>
       <li><div class="divider"></div></li>
     <li><a class="waves-effect menu" href="/">RESOURCES</a></li>
       <li><div class="divider"></div></li>
