--- a/rights-forward/app/views/users/_advancedsearch.html.erb
+++ b/rights-forward/app/views/users/_advancedsearch.html.erb
@@ -1,8 +1,19 @@
-<%= text_field :user, :fullname %>
+<div>
+  <%= search_form_for @q do |f| %>
+    <div class="field">
+      <%= f.label :fullname_cont, "Name >>>" %>
+      <%= f.search_field :fullname_cont  %>
+    </div>
+     <div class="field">
+      <%= f.label "Area of Expertise" %><br />
+      <%= f.collection_check_boxes :expertises_id_in_any, Expertise.all, :id, :name do |b| %>
+        <div class="collection-check-box">
+          <%= b.check_box %>
+          <%= b.label %>
+        </div>
+      <% end %>
+    </div>
+    <div class="actions"><%= f.submit "Search" %></div>
+  <% end %>
 
-
-<% for language in language.find(:all) %>
-<%= check_box_tag "user[language_ids][]", language.id,
-@user.languages.include?(language)%>
-<%= language.name %>
-<%end%>
+</div>
