--- a/rights-forward/app/views/users/_form.html.erb
+++ b/rights-forward/app/views/users/_form.html.erb
@@ -7,8 +7,38 @@
   </div>
 
   <div class="field">
-    <%= f.label "Area of Expertise" %><br />
+    <%= f.label "Regional Expertise" %><br />
     <%= f.collection_check_boxes :expertise_ids, Expertise.all, :id, :name do |b| %>
+      <div class="collection-check-box">
+        <%= b.check_box %>
+        <%= b.label %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="field">
+    <%= f.label "Skills" %><br />
+    <%= f.collection_check_boxes :skill_ids, Skill.all, :id, :name do |b| %>
+      <div class="collection-check-box">
+        <%= b.check_box %>
+        <%= b.label %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="field">
+    <%= f.label "Languages" %><br />
+    <%= f.collection_check_boxes :language_ids, Language.all, :id, :name do |b| %>
+      <div class="collection-check-box">
+        <%= b.check_box %>
+        <%= b.label %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="field">
+    <%= f.label "Training Expertise" %><br />
+    <%= f.collection_check_boxes :type_ids, Type.all, :id, :name do |b| %>
       <div class="collection-check-box">
         <%= b.check_box %>
         <%= b.label %>
