--- a/rights-forward/app/views/users/show.html.erb
+++ b/rights-forward/app/views/users/show.html.erb
@@ -17,16 +17,15 @@
 
   <div class="optionsMiddle">
 
-    Fullname: <p><%= @user['fullname'] %></p><br>
+    Full Name: <p><%= @user['fullname'] %></p><br>
     Bio: <p><%= @user['bio'] %></p><br>
     Contact: <p><%= @user['contact'] %></p><br>
     Affiliation: <p><%= @user['affiliation'] %></p><br>
-    Past Trainings: <br>
+    Past Trainings: <p><%= @user['trainings'] %></p><br>
     Regional Expertise: <p><%= @user.expertises.map(&:name).sort.join(", ") %></p> <br>
     Skills: <p><%= @user.skills.map(&:name).sort.join(", ") %></p><br>
     Languages: <p><%= @user.languages.map(&:name).sort.join(", ") %></p><br>
     Training Expertise: <p><%= @user.types.map(&:name).sort.join(", ") %></p><br>
-
 
   </div>
 
