--- a/rights-forward/app/views/users/index.html.erb
+++ b/rights-forward/app/views/users/index.html.erb
@@ -4,32 +4,21 @@
 </div>
 
 <div class="container">
-<h1>View All Trainers</h1>
-<h5><a href ="/">Home</a></h5><br>
+  <h1>Search Trainers</h1>
+  <h5><a href ="/">Home</a></h5><br>
 
-
-
-
-<hr>
-
-
-<div>
-  <%= render "advancedsearch" %>
-</div>
-
-
-
-<hr>
-
-
-
-<% @users.each do |user| %>
-  <a href="users/<%=user['id']%>"><%= user['fullname']%></a><br>
-  Works at <%= user['affiliation'] %></br>
   <hr>
 
-<% end %>
+  <div>
+    <%= render "advancedsearch" %>
+  </div>
 
+  <hr>
 
+  <% @users.each do |user| %>
+    <a href="users/<%=user['id']%>"><%= user['fullname']%></a><br>
+    <p>Works at <%= user['affiliation'] %></p></br>
+    <hr>
+  <% end %>
 
 </div>
