fix sign in / profile in navbar

--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -10,8 +10,13 @@
       <li><div class="divider"></div></li>
     <li><a class="waves-effect menu" href="/">RESOURCES</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="menu" href="/users/<%=current_user.id%>">PROFILE</a></li>
-      <li><div class="divider"></div></li>
+
+    <% if current_user %>
+      <li><a class="menu" href="/users/<%=current_user.id%>">PROFILE</a></li>
+    <% else %>
+      <li><a class="menu" href="/auth/twitter">SIGN IN</a></li>
+    <% end %>
+    <li><div class="divider"></div></li>
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
