--- a/rights-forward/app/views/users/index.html.erb
+++ b/rights-forward/app/views/users/index.html.erb
@@ -5,9 +5,8 @@
 
 <div class="container">
   <h1>Search Trainers</h1>
-  <h5><a href ="/">Home</a></h5><br>
 
-  <hr>
+  <hr class="lineHeader">
 
   <div>
     <%= render "advancedsearch" %>
