--- a/rights-forward/app/views/home/index.html.erb
+++ b/rights-forward/app/views/home/index.html.erb
@@ -3,25 +3,29 @@
 </div>
 
 <div class="container">
+  <div class="about">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
 
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
 
-<% if current_user %>
-  <h1><%= "Welcome #{current_user.name}" %></h1>
-  <img src=<%="#{current_user.image}"%> /> <br>
-  <h5><%= link_to "Sign out", "/signout" %></h5> <br>
-  <h5><a href ="users/<%=current_user.id%>/edit">Edit</a></h5>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-  <br>
+    <h5>Get started. <a href ="/users">Find a trainer.</a></h5>
 
-  <h5><a href ="/users">Show All</a></h5><br>
-
-
-
-<!-- if current user, then can edit / add things to database -->
-
-
-<% else %>
-  <h1><%= link_to "Sign in with Twitter", "/auth/twitter" %></h1>
-<% end %>
-
+  </div>
 </div>
