--- a/rights-forward/app/views/users/_advancedsearch.html.erb
+++ b/rights-forward/app/views/users/_advancedsearch.html.erb
@@ -7,9 +7,9 @@
 
      <div class="field">
 
-     <ul>
+     <ul class="checkFieldsUL">
       <li class="checkFields">
-        <%= f.label "Regional Expertise" %><br />
+        <label class="labelTitle">Regional Expertise</label><br>
         <%= f.collection_check_boxes :expertises_id_in_any, Expertise.all, :id, :name do |b| %>
         <div class="collection-check-box">
           <%= b.check_box %>
@@ -19,7 +19,7 @@
       </li>
 
       <li class="checkFields">
-        <%= f.label "Skills" %><br />
+        <label class="labelTitle">Skills</label><br>
         <%= f.collection_check_boxes :skills_id_in_any, Skill.all, :id, :name do |b| %>
         <div class="collection-check-box">
           <%= b.check_box %>
@@ -29,7 +29,7 @@
       </li>
 
       <li class="checkFields">
-        <%= f.label "Languages" %><br />
+        <label class="labelTitle">Languages</label><br>
         <%= f.collection_check_boxes :languages_id_in_any, Language.all, :id, :name do |b| %>
         <div class="collection-check-box">
           <%= b.check_box %>
@@ -39,7 +39,7 @@
       </li>
 
       <li class="checkFields">
-        <%= f.label "Training Expertise" %><br />
+        <label class="labelTitle">Training Expertise</label><br>
         <%= f.collection_check_boxes :types_id_in_any, Type.all, :id, :name do |b| %>
         <div class="collection-check-box">
           <%= b.check_box %>
