fix user view and profile view

--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -1,5 +1,5 @@
 
- <ul id="slide-out" class="side-nav fixed">
+  <ul id="slide-out" class="side-nav fixed">
     <li><div class="userView">
       <h3 id="title">RIGHTS FORWARD</h3>
     </div></li>
@@ -17,6 +17,32 @@
       <li><a class="menu" href="/auth/twitter">SIGN IN</a></li>
     <% end %>
     <li><div class="divider"></div></li>
+
+<!--     <div class="row">
+    <ul class="ExternalLinks">
+      <li class="Widget">
+        <a href="mailto:sarahm.aoun@gmail.com">
+          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-7f235f80-b22b-11e4-a0c2-e32802629404.jpg">
+        </a>
+      </li>
+      <li class="Widget">
+        <a href="https://www.facebook.com/sadakaoun">
+          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-89bfbe20-b22b-11e4-a0c2-e32802629404.jpg">
+        </a>
+      </li>
+      <li class="Widget">
+        <a href="https://www.twitter.com/sa0un">
+          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-906c44f0-b22b-11e4-a0c2-e32802629404.jpg">
+        </a>
+      </li>
+      <li class="Widget">
+        <a href="https://www.instagram.com/saoun">
+          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-960fe740-b22b-11e4-b16f-0f1b4a9e0cef.jpg">
+        </a>
+      </li>
+    </ul>
+    </div> -->
+
   </ul>
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
