--- a/rights-forward/app/views/users/show.html.erb
+++ b/rights-forward/app/views/users/show.html.erb
@@ -23,6 +23,9 @@
       <h3><%= @user['fullname'] %></h3>
     <% end %>
 
+  <%else%>
+  <h3><%= @user['fullname'] %></h3>
+
   <% end %>
 
   <hr>
