fix home show route

--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -8,7 +8,7 @@
       <li><div class="divider"></div></li>
     <li><a class="menu" href="/users">FIND TRAINER</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="waves-effect menu" href="/">RESOURCES</a></li>
+    <li><a class="waves-effect menu" href="home/show">RESOURCES</a></li>
       <li><div class="divider"></div></li>
 
     <% if current_user %>
@@ -18,26 +18,26 @@
     <% end %>
     <li><div class="divider"></div></li>
 
-<!--     <div class="row">
-    <ul class="ExternalLinks">
+    <!-- <div class="row">
+    <ul class="externalLinks">
       <li class="Widget">
-        <a href="mailto:sarahm.aoun@gmail.com">
-          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-7f235f80-b22b-11e4-a0c2-e32802629404.jpg">
+        <a href="https://twitter.com/sa0un">
+          <img src="<%=asset_path('twitter.png')%>"/>
         </a>
       </li>
-      <li class="Widget">
+      <li class="widget">
         <a href="https://www.facebook.com/sadakaoun">
-          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-89bfbe20-b22b-11e4-a0c2-e32802629404.jpg">
+          <img src="<%=asset_path('facebook.png')%>"/>
         </a>
       </li>
-      <li class="Widget">
-        <a href="https://www.twitter.com/sa0un">
-          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-906c44f0-b22b-11e4-a0c2-e32802629404.jpg">
+      <li class="widget">
+        <a href="https://www.github.com/saoun">
+          <img src="<%=asset_path('github.png')%>"/>
         </a>
       </li>
-      <li class="Widget">
-        <a href="https://www.instagram.com/saoun">
-          <img src="https://rm-content.s3.amazonaws.com/521a57087f464d1a6b0000c8/55743/upload-960fe740-b22b-11e4-b16f-0f1b4a9e0cef.jpg">
+      <li class="widget">
+        <a href="https://www.linkedin.com/in/sarahmaoun">
+          <img src="<%=asset_path('linkedin.png')%>"/>
         </a>
       </li>
     </ul>
