--- a/rights-forward/app/assets/stylesheets/navbar.scss
+++ b/rights-forward/app/assets/stylesheets/navbar.scss
@@ -31,6 +31,15 @@ body {
   background-color: #545450;
 }
 
+img {
+  width: 30px;
+}
+
+.widget {
+  display: inline-block;
+  padding: -10px;
+  margin: 0;
+}
 
 
 
