--- a/rights-forward/app/views/users/_navbar.html.erb
+++ b/rights-forward/app/views/users/_navbar.html.erb
@@ -8,7 +8,7 @@
       <li><div class="divider"></div></li>
     <li><a class="menu" href="/users">FIND TRAINER</a></li>
       <li><div class="divider"></div></li>
-    <li><a class="waves-effect menu" href="home/show">RESOURCES</a></li>
+    <li><a class="waves-effect menu" href="/home/show">RESOURCES</a></li>
       <li><div class="divider"></div></li>
 
     <% if current_user %>
